# sighted

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  tox.ini
sighted/: __init__.py  language.py  parts_of_speech.py
sighted/literal/: algo.py  lang.py
